create HTML structure for index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,82 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <header>
+      <img src="img/Logo.png" alt="logo">
+      <nav>
+        <li><a href="#">Каталог</a>
+          <ul>
+            <li>Новинки</li>
+            <li>Сливочное</li>
+            <li>Щербеты</li>
+            <li>Фруктовый лед</li>
+            <li>Мелорин</li>            
+          </ul>
+        </li>
+        <li><a href="#">Доставка и оплата</a></li>
+        <li><a href="#">О компании</a></li>
+      </nav>
+      <button><img src="img/Лупа.png" alt="search item"></button>
+      <img src="img/Вход.png" alt="login">
+      <button>Вход</button>
+      <a href="img/Корзина2.png">Пусто</a>
+    </header>
+
+    <main>
+      <section>
+      </section>
+      <section>
+        <article>
+          <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
+            собственного производства на развес</h2>
+          <img src="img/Мороженко.png" alt="ice cream">
+          <p>Все наше мороженое изготавливается на собственном производстве, с
+            использованием современного оборудования и проверенных временем
+            технологий.</p>
+          <img src="img/Листик.png" alt="leaf">
+          <p>Для приготовления мороженого используются настоящие сливки и молоко
+            высочайшего качества. Все дополнительные ингредиенты и добавки
+            произведены из натурального, экологически чистого сырья.</p>
+          <img src="img/Корова.png" alt="cow">
+          <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          <img src="img/Градусник.png" alt="thermometer">
+          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+        </article>
+        <section>
+          <h4>Новое в нашем блоге</h4>
+          <h3>10 способов сервировки фруктовых щербетов к столу</h3>
+        </section>
+        <section>
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
+          <input type="text" value="email@example.com">
+          <button>Отправить</button>
+        </section>
+      </section>
+      <section>
+      </section>
+    </main>
+
+    <footer>
+      <ul>
+        <li><img src="img/twt.png" alt="twitter link"></li>
+        <li><img src="img/inst.png" alt="instagram link"></li>
+        <li><img src="img/fb.png" alt="facebook link"></li>
+        <li><img src="img/vk.png" alt="vk link"></li>
+      </ul>
+      <img src="img/heart.png" alt="heart">
+      <div>
+        <p>Для поставщиков</p>
+        <p>О производстве</p>
+      </div>
+      <div>
+        <p>Наши документы</p>
+        <p>Экологические стандарты</p>
+      </div>
+      <div>
+        <img src="img/htmlacad-small-logo.png" alt="small html academy">
+        <h6>Сделано в HTML Academy © 2019</h6>
+      </div>
+    </footer>
 
   </body>
 </html>
