create HTML structure for catalog.html

--- a/index.html
+++ b/index.html
@@ -9,27 +9,35 @@
     <header>
       <img src="img/Logo.png" alt="logo">
       <nav>
-        <li><a href="#">Каталог</a>
-          <ul>
-            <li>Новинки</li>
-            <li>Сливочное</li>
-            <li>Щербеты</li>
-            <li>Фруктовый лед</li>
-            <li>Мелорин</li>            
-          </ul>
-        </li>
-        <li><a href="#">Доставка и оплата</a></li>
-        <li><a href="#">О компании</a></li>
+        <ul>
+            <li><a href="catalog.html">Каталог</a>
+              <ul>
+                <li>Новинки</li>
+                <li>Сливочное</li>
+                <li>Щербеты</li>
+                <li>Фруктовый лед</li>
+                <li>Мелорин</li>
+              </ul>
+            </li>
+            <li><a href="#">Доставка и оплата</a></li>
+            <li><a href="#">О компании</a></li>
+        </ul>
       </nav>
-      <button><img src="img/Лупа.png" alt="search item"></button>
-      <img src="img/Вход.png" alt="login">
-      <button>Вход</button>
-      <a href="img/Корзина2.png">Пусто</a>
+      <ul>
+        <li>
+          <button><img src="img/Лупа.png" alt="search item"></button>
+        </li>
+        <li>
+          <button type='button'><img src="img/Вход.png" alt="login">Вход</button>
+        </li>
+        <li>
+          <a href="img/Корзина2.png">Пусто</a>
+        </li>
+      </ul>
     </header>
 
     <main>
-      <section>
-      </section>
+        <h1>Магазин Глэйси</h1>
       <section>
         <article>
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
@@ -56,8 +64,6 @@
           <input type="text" value="email@example.com">
           <button>Отправить</button>
         </section>
-      </section>
-      <section>
       </section>
     </main>
 
