grouped content in footer for both files and add add HTML structure for popups

--- a/index.html
+++ b/index.html
@@ -74,20 +74,38 @@
         <li><img src="img/fb.png" alt="facebook link"></li>
         <li><img src="img/vk.png" alt="vk link"></li>
       </ul>
-      <img src="img/heart.png" alt="heart">
-      <div>
-        <p>Для поставщиков</p>
-        <p>О производстве</p>
-      </div>
-      <div>
-        <p>Наши документы</p>
-        <p>Экологические стандарты</p>
+      <div >
+        <div>
+          <img src="img/heart.png" alt="heart">
+          <p>Для поставщиков</p>
+          <p>О производстве</p>
+        </div>
+        <div>
+          <p>Наши документы</p>
+          <p>Экологические стандарты</p>
+        </div>
       </div>
       <div>
         <img src="img/htmlacad-small-logo.png" alt="small html academy">
         <h6>Сделано в HTML Academy © 2019</h6>
       </div>
     </footer>
-
+    <!-- login form -->
+    <section>
+      <input type="text" value="email@example.com">
+      <input type="text" value="••••••••">
+      <button type="button">Войти</button>
+      <p>Забыли пароль?</p>
+      <p>Новая регистрация</p>
+    </section>
+    <!-- search -->
+    <input type="text" value="Крем-брюле">
+    <!-- obratnaya svyaz' -->
+    <h4>Мы обязательно вам ответим!"</h4>
+    <input type="text" value="Имя Фамилия">
+    <input type="text" value="email@example.com">
+    <textarea name="name" rows="8" cols="80">В свободной форме
+    </textarea>
+    <button type="button" name="button">Отправить</button>
   </body>
 </html>
