--- a/catalog.html
+++ b/catalog.html
@@ -94,19 +94,23 @@
           <li><img src="img/fb.png" alt="facebook link"></li>
           <li><img src="img/vk.png" alt="vk link"></li>
         </ul>
-        <img src="img/heart.png" alt="heart">
-        <div>
-          <p>Для поставщиков</p>
-          <p>О производстве</p>
-        </div>
-        <div>
-          <p>Наши документы</p>
-          <p>Экологические стандарты</p>
+        <div >
+          <div>
+            <img src="img/heart.png" alt="heart">
+            <p>Для поставщиков</p>
+            <p>О производстве</p>
+          </div>
+          <div>
+            <p>Наши документы</p>
+            <p>Экологические стандарты</p>
+          </div>
         </div>
         <div>
           <img src="img/htmlacad-small-logo.png" alt="small html academy">
           <h6>Сделано в HTML Academy © 2019</h6>
         </div>
       </footer>
+
+      <!-- car form -->
   </body>
 </html>
