--- a/catalog.html
+++ b/catalog.html
@@ -111,6 +111,25 @@
         </div>
       </footer>
 
-      <!-- car form -->
+      <!-- cart form -->
+      <section>
+        <div>
+          <span>x</span>
+          <img src="img/catalog/sm ice cream 1.png" alt="ice cream image">
+          <p>Пломбир с апельсиновым джемом</p>
+          <span>1,5 кг х 200 руб.</span>
+          <span>200 руб.</span>
+        </div>
+        <div>
+          <span>x</span>
+          <img src="img/catalog/sm ice cream 2.png" alt="ice cream image">
+          <p>Клубничный пломбир с присыпкой из белого шоколада</p>
+          <span>1,5 кг х 300 руб.</span>
+          <span>450 руб.</span>
+        </div>
+        <hr>
+        <span>Итого: 750 руб.</span>
+      </section>
+      <button type="button" name="button">Оформить заказ</button>
   </body>
 </html>
