minor fix related to Russian transliteration

--- a/catalog.html
+++ b/catalog.html
@@ -39,8 +39,8 @@
 
       <main>
         <section>
-          <a href="index.html">Glavnaya</a> > <a href="catalog.html">Catalog</a>
-           > Slivochnoe
+          <a href="index.html">Главная</a> > <a href="catalog.html">Каталог</a>
+           > Сливочное
         </section>
         <section>
           <span>С 10 до 20, ежедневно</span>
