--- a/catalog.html
+++ b/catalog.html
@@ -48,40 +48,40 @@
         </section>
         <h2>Сливочное мороженое</h2>
         <section>
-          <img src="img/catalog/1 (1).png" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+          <img src="img/catalog/1(1).png" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
           <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
           <p>310 ₽/<span>кг</span></p>
-          <img src="img/catalog/2 (1).png" alt="Сливочно-кофейное с кусочками шоколада">
+          <img src="img/catalog/2(1).png" alt="Сливочно-кофейное с кусочками шоколада">
           <p>Сливочно-кофейное с кусочками шоколада</p>
           <p>370 ₽/<span>кг</span></p>
-          <img src="img/catalog/3 (1).png" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <img src="img/catalog/3(1).png" alt="Сливочно-клубничное с присыпкой из белого шоколада">
           <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
           <p>355 ₽/<span>кг</span></p>
-          <img src="img/catalog/4 (1).png" alt="Сливочное крем-брюле с карамельной подливкой">
+          <img src="img/catalog/4(1).png" alt="Сливочное крем-брюле с карамельной подливкой">
           <p>Сливочное крем-брюле с карамельной подливкой</p>
           <p>415 ₽/<span>кг</span></p>
-          <img src="img/catalog/1 (2).png" alt="Сливочное с брусничным джемом">
+          <img src="img/catalog/1(2).png" alt="Сливочное с брусничным джемом">
           <p>Сливочное с брусничным джемом</p>
           <p>325 ₽/<span>кг</span></p>
-          <img src="img/catalog/2 (2).png" alt="Сливочно-черничное с цельными ягодами черники ">
+          <img src="img/catalog/2(2).png" alt="Сливочно-черничное с цельными ягодами черники ">
           <p>Сливочно-черничное с цельными ягодами черники </p>
           <p>410 ₽/<span>кг</span></p>
-          <img src="img/catalog/3 (2).png" alt="Сливочно-лимонное с карамельной присыпкой">
+          <img src="img/catalog/3(2).png" alt="Сливочно-лимонное с карамельной присыпкой">
           <p>Сливочно-лимонное с карамельной присыпкой</p>
           <p>375 ₽/<span>кг</span></p>
-          <img src="img/catalog/4 (2).png" alt="Сливочное с шоколадной стружкой">
+          <img src="img/catalog/4(2).png" alt="Сливочное с шоколадной стружкой">
           <p>Сливочное с шоколадной стружкой</p>
           <p>320 ₽/<span>кг</span></p>
-          <img src="img/catalog/1 (3).png" alt="Сливочно-ванильное с кусочками шоколада">
+          <img src="img/catalog/1(3).png" alt="Сливочно-ванильное с кусочками шоколада">
           <p>Сливочно-ванильное с кусочками шоколада</p>
           <p>440 ₽/<span>кг</span></p>
-          <img src="img/catalog/2 (3).png" alt="Сливочноe с ментоловым сиропом">
+          <img src="img/catalog/2(3).png" alt="Сливочноe с ментоловым сиропом">
           <p>Сливочноe с ментоловым сиропом</p>
           <p>435 ₽/<span>кг</span></p>
-          <img src="img/catalog/3 (3).png" alt="Сливочное с кусочками черного шоколада">
+          <img src="img/catalog/3(3).png" alt="Сливочное с кусочками черного шоколада">
           <p>Сливочное с кусочками черного шоколада</p>
           <p>355 ₽/<span>кг</span></p>
-          <img src="img/catalog/4 (3).png" alt="Сливочное с мятным сиропом">
+          <img src="img/catalog/4(3).png" alt="Сливочное с мятным сиропом">
           <p>Сливочное с мятным сиропом</p>
           <p>420 ₽/<span>кг</span></p>
         </section>
@@ -115,14 +115,14 @@
       <section>
         <div>
           <span>x</span>
-          <img src="img/catalog/sm ice cream 1.png" alt="ice cream image">
+          <img src="img/catalog/sm-ic-1.png" alt="ice cream image">
           <p>Пломбир с апельсиновым джемом</p>
           <span>1,5 кг х 200 руб.</span>
           <span>200 руб.</span>
         </div>
         <div>
           <span>x</span>
-          <img src="img/catalog/sm ice cream 2.png" alt="ice cream image">
+          <img src="img/catalog/sm-ic-2.png" alt="ice cream image">
           <p>Клубничный пломбир с присыпкой из белого шоколада</p>
           <span>1,5 кг х 300 руб.</span>
           <span>450 руб.</span>
