translate png names to english

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <header>
-      <img src="img/Logo.png" alt="logo">
+      <img src="img/Logo.png" alt="HTML Academy logo">
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
@@ -31,7 +31,7 @@
           <button type='button'><img src="img/Вход.png" alt="login">Вход</button>
         </li>
         <li>
-          <a href="img/Корзина2.png">Пусто</a>
+          <a href="img/cart2.png">Пусто</a>
         </li>
       </ul>
     </header>
@@ -42,17 +42,17 @@
         <article>
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
             собственного производства на развес</h2>
-          <img src="img/Мороженко.png" alt="ice cream">
+          <img src="img/icecream.png" alt="ice cream">
           <p>Все наше мороженое изготавливается на собственном производстве, с
             использованием современного оборудования и проверенных временем
             технологий.</p>
-          <img src="img/Листик.png" alt="leaf">
+          <img src="img/leaf.png" alt="leaf">
           <p>Для приготовления мороженого используются настоящие сливки и молоко
             высочайшего качества. Все дополнительные ингредиенты и добавки
             произведены из натурального, экологически чистого сырья.</p>
-          <img src="img/Корова.png" alt="cow">
+          <img src="img/cow.png" alt="cow">
           <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          <img src="img/Градусник.png" alt="thermometer">
+          <img src="img/thermometer.png" alt="thermometer">
           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
         <section>
@@ -99,7 +99,7 @@
       <p>Новая регистрация</p>
     </section>
     <!-- search -->
-    <input type="text" value="Крем-брюле">
+    <input type="text">
     <!-- obratnaya svyaz' -->
     <h4>Мы обязательно вам ответим!"</h4>
     <input type="text" value="Имя Фамилия">
