--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <button><img src="img/Лупа.png" alt="search item"></button>
         </li>
         <li>
-          <button type='button'><img src="img/Вход.png" alt="login">Вход</button>
+          <button type="button"><img src="img/Вход.png" alt="login">Вход</button>
         </li>
         <li>
           <a href="img/cart2.png">Пусто</a>
@@ -87,25 +87,31 @@
       </div>
       <div>
         <img src="img/htmlacad-small-logo.png" alt="small html academy">
-        <h6>Сделано в HTML Academy © 2019</h6>
+        <p>Сделано в HTML Academy © 2019</p>
       </div>
     </footer>
     <!-- login form -->
     <section>
-      <input type="text" value="email@example.com">
-      <input type="text" value="••••••••">
-      <button type="button">Войти</button>
-      <p>Забыли пароль?</p>
-      <p>Новая регистрация</p>
+      <form>
+        <input type="text" value="email@example.com">
+        <input type="text" value="••••••••">
+        <button type="button">Войти</button>
+        <p>Забыли пароль?</p>
+        <p>Новая регистрация</p>
+      </form>
     </section>
     <!-- search -->
-    <input type="text">
+    <form>
+      <input type="text">
+    </form>
     <!-- obratnaya svyaz' -->
-    <h4>Мы обязательно вам ответим!"</h4>
-    <input type="text" value="Имя Фамилия">
-    <input type="text" value="email@example.com">
-    <textarea name="name" rows="8" cols="80">В свободной форме
-    </textarea>
-    <button type="button" name="button">Отправить</button>
+    <form>
+      <h4>Мы обязательно вам ответим!"</h4>
+      <input type="text" value="Имя Фамилия">
+      <input type="text" value="email@example.com">
+      <textarea name="name" rows="8" cols="80">В свободной форме
+      </textarea>
+      <button type="button" name="button">Отправить</button>
+    <form>
   </body>
 </html>
