switched headings, replaced spans by divs

--- a/catalog.html
+++ b/catalog.html
@@ -117,18 +117,18 @@
           <span>x</span>
           <img src="img/catalog/sm-ic-1.png" alt="ice cream image">
           <p>Пломбир с апельсиновым джемом</p>
-          <span>1,5 кг х 200 руб.</span>
-          <span>200 руб.</span>
+          <div>1,5 кг х 200 руб.</div>
+          <div>200 руб.</div>
         </div>
         <div>
           <span>x</span>
           <img src="img/catalog/sm-ic-2.png" alt="ice cream image">
           <p>Клубничный пломбир с присыпкой из белого шоколада</p>
-          <span>1,5 кг х 300 руб.</span>
-          <span>450 руб.</span>
+          <div>1,5 кг х 300 руб.</div>
+          <div>450 руб.</div>
         </div>
         <hr>
-        <span>Итого: 750 руб.</span>
+        <div>Итого: 750 руб.</div>
         <button type="button" name="button">Оформить заказ</button>
       </section>
   </body>
