--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
     <!-- obratnaya svyaz' -->
     <form>
       <h4>Мы обязательно вам ответим!"</h4>
-      <input type="text" value="Имя Фамилия">
-      <input type="text" value="email@example.com">
-      <textarea name="name" rows="8" cols="80">В свободной форме
+      <input type="text">
+      <input type="text">
+      <textarea rows="8" cols="80">В свободной форме
       </textarea>
-      <button type="button" name="button">Отправить</button>
+      <button type="button">Отправить</button>
     <form>
   </body>
 </html>
