replaced span by button in catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -114,14 +114,14 @@
       <!-- cart form -->
       <section>
         <div>
-          <span>x</span>
+          <button type="button">x</button>
           <img src="img/catalog/sm-ic-1.png" alt="ice cream image">
           <p>Пломбир с апельсиновым джемом</p>
           <div>1,5 кг х 200 руб.</div>
           <div>200 руб.</div>
         </div>
         <div>
-          <span>x</span>
+          <button type="button">x</button>
           <img src="img/catalog/sm-ic-2.png" alt="ice cream image">
           <p>Клубничный пломбир с присыпкой из белого шоколада</p>
           <div>1,5 кг х 300 руб.</div>
