removed alt attribute and translated file names from ru to eng

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="img/Logo.png" alt="logo">
+      <img src="img/Logo.png">
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
