--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <header>
-      <img src="img/Logo.png" alt="HTML Academy logo">
+      <img src="img/Logo.png">
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
@@ -25,10 +25,10 @@
       </nav>
       <ul>
         <li>
-          <button><img src="img/Лупа.png" alt="search item"></button>
+          <button><img src="img/Search.png" alt="search item"></button>
         </li>
         <li>
-          <button type="button"><img src="img/Вход.png" alt="login">Вход</button>
+          <button type="button"><img src="img/Login.png" alt="login">Вход</button>
         </li>
         <li>
           <a href="img/cart2.png">Пусто</a>
