add HTML for two more section on the index.html page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,58 @@
     </header>
 
     <main>
-        <h1>Магазин Глэйси</h1>
+      <section>
+        <section>
+          <div>
+            <span>С 10 до 20, ежедневно</span>
+            <span>8 812 450-25-25</span>
+          </div>
+          <h1>Крем-брюле и пломбир с малиновым джемом</h1>
+          <button type="button">Давайте оба!</button>
+          <span>ooo</span><!-- nuchna pomozh' s etim -->
+        </section>
+
+        <section>
+          <div>
+            <h3>Малинка даром!</h3>
+            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
+              заказ банку малинового варенья бесплатно.</p>
+            <button type="button">Хочу варенье!</button>
+          </div>
+          <div>
+            <h3>Шоколадки даром!</h3>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
+              вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <button type="button">Хочу шоколадки!</button>
+          </div>
+        </section>
+        <section>
+          <div>
+            <span>HIT</span>
+            <img src="img/catalog/1(1).png" alt="ice cream photo">
+            <p>310<span>₽/кг</span></p>
+            <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+          </div>
+          <div>
+            <span>HIT</span>
+            <img src="img/catalog/1(2).png" alt="ice cream photo">
+            <p>380<span>₽/кг</span></p>
+            <p>Сливочно-кофейное с кусочками шоколада</p>
+          </div>
+          <div>
+            <span>HIT</span>
+            <img src="img/catalog/1(3).png" alt="ice cream photo">
+            <p>355<span>₽/кг</span></p>
+            <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+          </div>
+          <div>
+            <span>HIT</span>
+            <img src="img/catalog/2(1).png" alt="ice cream photo">
+            <p>415<span>₽/кг</span></p>
+            <p>Сливочное крем-брюле с карамельной подливкой</p>
+          </div>
+        </section>
+      </section>
       <section>
         <article>
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
@@ -65,8 +116,21 @@
           <button>Отправить</button>
         </section>
       </section>
+      <section>
+        <!-- iframe of google maps -->
+        <div class="map"></div>
+        <img src="img/pin.svg" alt="pin">
+        <div>
+          <p>Адрес главного офиса и офлайн-магазина:</p>
+          <p><b>ул. Большая Конюшенная 19/8, <br>
+            Санкт-Петербург</b></p>
+          <p>Для заказов по телефону:</p>
+          <p><b>8 812 450-25-25</b><br>
+            <span>(с 10 до 20 ежедневно)</span></p>
+          <button type="button">Форма обратной связи</button>
+        </div>
+      </section>
     </main>
-
     <footer>
       <ul>
         <li><img src="img/twt.png" alt="twitter link"></li>
