add dots controllers for image slider

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
           </div>
           <h1>Крем-брюле и пломбир с малиновым джемом</h1>
           <button type="button">Давайте оба!</button>
-          <span>ooo</span><!-- nuchna pomozh' s etim -->
+          <div>
+            <label class="dot-controller"></label>
+            <label class="dot-controller"></label>
+            <label class="dot-controller"></label>
+          </div>
         </section>
 
         <section>
