--- a/index.html
+++ b/index.html
@@ -53,44 +53,44 @@
         </section>
 
         <section>
-          <div>
+          <section>
             <h3>Малинка даром!</h3>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
               заказ банку малинового варенья бесплатно.</p>
             <button type="button">Хочу варенье!</button>
-          </div>
-          <div>
+          </section>
+          <section>
             <h3>Шоколадки даром!</h3>
             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
               вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
             <button type="button">Хочу шоколадки!</button>
-          </div>
+          </section>
         </section>
         <section>
-          <div>
+          <section>
             <span>HIT</span>
             <img src="img/catalog/1(1).png" alt="ice cream photo">
             <p>310<span>₽/кг</span></p>
             <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-          </div>
-          <div>
+          </section>
+          <section>
             <span>HIT</span>
             <img src="img/catalog/1(2).png" alt="ice cream photo">
             <p>380<span>₽/кг</span></p>
             <p>Сливочно-кофейное с кусочками шоколада</p>
-          </div>
-          <div>
+          </section>
+          <section>
             <span>HIT</span>
             <img src="img/catalog/1(3).png" alt="ice cream photo">
             <p>355<span>₽/кг</span></p>
             <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-          </div>
-          <div>
+          </section>
+          <section>
             <span>HIT</span>
             <img src="img/catalog/2(1).png" alt="ice cream photo">
             <p>415<span>₽/кг</span></p>
             <p>Сливочное крем-брюле с карамельной подливкой</p>
-          </div>
+          </section>
         </section>
       </section>
       <section>
