add more graphics for index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         </li>
       </ul>
     </header>
-
     <main>
       <section>
         <section>
@@ -43,6 +42,9 @@
             <span>С 10 до 20, ежедневно</span>
             <span>8 812 450-25-25</span>
           </div>
+          <img src="img/cone1.png" alt="ice cream cone1">
+          <img src="img/cone2.png" alt="ice cream cone1">
+          <img src="img/bkg-cone.png" alt="ice cream bkg">
           <h1>Крем-брюле и пломбир с малиновым джемом</h1>
           <button type="button">Давайте оба!</button>
           <div>
@@ -54,12 +56,14 @@
 
         <section>
           <section>
+            <img src="img/bkgs/rasp-bkgs.png" alt="raspberry bkg">
             <h3>Малинка даром!</h3>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
               заказ банку малинового варенья бесплатно.</p>
             <button type="button">Хочу варенье!</button>
           </section>
           <section>
+            <img src="img/bkgs/choc-bkgs.png" alt="chocolate bkg">
             <h3>Шоколадки даром!</h3>
             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
               вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
@@ -68,25 +72,25 @@
         </section>
         <section>
           <section>
-            <span>HIT</span>
+            <img src="img/bkgs/hit.svg" alt="hit svg">
             <img src="img/catalog/1(1).png" alt="ice cream photo">
             <p>310<span>₽/кг</span></p>
             <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
           </section>
           <section>
-            <span>HIT</span>
+            <img src="img/bkgs/hit.svg" alt="hit svg">
             <img src="img/catalog/1(2).png" alt="ice cream photo">
             <p>380<span>₽/кг</span></p>
             <p>Сливочно-кофейное с кусочками шоколада</p>
           </section>
           <section>
-            <span>HIT</span>
+            <img src="img/bkgs/hit.svg" alt="hit svg">
             <img src="img/catalog/1(3).png" alt="ice cream photo">
             <p>355<span>₽/кг</span></p>
             <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
           </section>
           <section>
-            <span>HIT</span>
+            <img src="img/bkgs/hit.svg" alt="hit svg">
             <img src="img/catalog/2(1).png" alt="ice cream photo">
             <p>415<span>₽/кг</span></p>
             <p>Сливочное крем-брюле с карамельной подливкой</p>
@@ -94,6 +98,7 @@
         </section>
       </section>
       <section>
+        <img src="img/bkgs/wafle-bkg.png" alt="waffle background">
         <article>
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
             собственного производства на развес</h2>
@@ -111,6 +116,7 @@
           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
         <section>
+          <img src="img/bkgs/strawberry-bkg.png" alt="strawberry background">
           <h3>Новое в нашем блоге</h3>
           <h4>10 способов сервировки фруктовых щербетов к столу</h4>
         </section>
@@ -122,7 +128,7 @@
       </section>
       <section>
         <!-- iframe of google maps -->
-        <div class="map"></div>
+        <img src="img/map.png"> <!-- temp -->
         <img src="img/pin.svg" alt="pin">
         <div>
           <p>Адрес главного офиса и офлайн-магазина:</p>
