minor tweaks in HTML structure

--- a/catalog.html
+++ b/catalog.html
@@ -24,10 +24,10 @@
       </nav>
       <ul>
         <li>
-          <button type="button"><img src="img/Лупа.png" alt="search item"></button>
+          <button type="button"><img src="img/search.png" alt="search item"></button>
         </li>
         <li>
-          <button type='button'><img src="img/Вход.png" alt="login">Вход</button>
+          <button type='button'><img src="img/Login.png" alt="login">Вход</button>
         </li>
         <li>
           <a href="img/Корзина2.png">2 товара</a>
