--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="img/Logo.png">
+      <img src="img/Logo.png" alt="Gllacy Shop Logo">
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
@@ -57,7 +57,6 @@
           </div>
           <div>
             <p>Цена: 100 руб. – 500 руб.</p>
-            <!-- found this solution https://leaverou.github.io/multirange/ -->
             <input type="range" />
           </div>
           <div>
