--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="img/Logo.png">
+      <img src="img/Logo.png" alt="Gllacy Shop Logo">
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
@@ -43,7 +43,7 @@
           </div>
           <img src="img/cone1.png" alt="ice cream cone1">
           <img src="img/cone2.png" alt="ice cream cone1">
-          <img src="img/bkg-cone.png" alt="ice cream bkg">
+          <div class="cone-bkg"></div>
           <h1>Крем-брюле и пломбир с малиновым джемом</h1>
           <button type="button">Давайте оба!</button>
           <div>
@@ -55,67 +55,69 @@
 
         <section>
           <section>
-            <img src="img/bkgs/rasp-bkgs.png" alt="raspberry bkg">
+            <div class="raspberry-bkg"></div>
             <h3>Малинка даром!</h3>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
               заказ банку малинового варенья бесплатно.</p>
-            <button type="button">Хочу варенье!</button>
+            <a href="#">Хочу варенье!</></a>
           </section>
           <section>
-            <img src="img/bkgs/choc-bkgs.png" alt="chocolate bkg">
+            <div class="chocolate-bkg"></div>
             <h3>Шоколадки даром!</h3>
             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
               вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <button type="button">Хочу шоколадки!</button>
+              <a href="#">Хочу шоколадки!</a>
           </section>
         </section>
         <section>
-          <section>
-            <img src="img/bkgs/hit.svg" alt="hit svg">
-            <img src="img/catalog/1(1).png" alt="ice cream photo">
-            <p>310<span>₽/кг</span></p>
-            <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-          </section>
-          <section>
-            <img src="img/bkgs/hit.svg" alt="hit svg">
-            <img src="img/catalog/1(2).png" alt="ice cream photo">
-            <p>380<span>₽/кг</span></p>
-            <p>Сливочно-кофейное с кусочками шоколада</p>
-          </section>
-          <section>
-            <img src="img/bkgs/hit.svg" alt="hit svg">
-            <img src="img/catalog/1(3).png" alt="ice cream photo">
-            <p>355<span>₽/кг</span></p>
-            <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-          </section>
-          <section>
-            <img src="img/bkgs/hit.svg" alt="hit svg">
-            <img src="img/catalog/2(1).png" alt="ice cream photo">
-            <p>415<span>₽/кг</span></p>
-            <p>Сливочное крем-брюле с карамельной подливкой</p>
-          </section>
+          <ul>
+            <li>
+              <span>HIT</span>
+              <img src="img/catalog/1(1).png" alt="ice cream photo">
+              <p>310<span>₽/кг</span></p>
+              <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+            </li>
+            <li>
+              <span>HIT</span>
+              <img src="img/catalog/1(2).png" alt="ice cream photo">
+              <p>380<span>₽/кг</span></p>
+              <p>Сливочно-кофейное с кусочками шоколада</p>
+            </li>
+            <li>
+              <span>HIT</span>
+              <img src="img/catalog/1(3).png" alt="ice cream photo">
+              <p>355<span>₽/кг</span></p>
+              <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+            </li>
+            <li>
+              <span>HIT</span>
+              <img src="img/catalog/2(1).png" alt="ice cream photo">
+              <p>415<span>₽/кг</span></p>
+              <p>Сливочное крем-брюле с карамельной подливкой</p>
+            </li>
+          </ul>
         </section>
       </section>
       <section>
-        <img src="img/bkgs/wafle-bkg.png" alt="waffle background">
+        <div class="waffle-bkg"></div>
         <article>
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
             собственного производства на развес</h2>
-          <img src="img/icecream.png" alt="ice cream">
+          <img src="img/icecream.png" alt="ice cream icon">
           <p>Все наше мороженое изготавливается на собственном производстве, с
             использованием современного оборудования и проверенных временем
             технологий.</p>
-          <img src="img/leaf.png" alt="leaf">
+          <img src="img/leaf.png" alt="leaf icon">
           <p>Для приготовления мороженого используются настоящие сливки и молоко
             высочайшего качества. Все дополнительные ингредиенты и добавки
             произведены из натурального, экологически чистого сырья.</p>
-          <img src="img/cow.png" alt="cow">
+          <img src="img/cow.png" alt="cow icon">
           <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          <img src="img/thermometer.png" alt="thermometer">
+          <img src="img/thermometer.png" alt="thermometer icon">
           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
         <section>
-          <img src="img/bkgs/strawberry-bkg.png" alt="strawberry background">
+          <div class="strawberry-bkg"></div>
           <h3>Новое в нашем блоге</h3>
           <h4>10 способов сервировки фруктовых щербетов к столу</h4>
         </section>
