replace pngs to svgs, upload more svg graphics

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="img/Logo.png" alt="Gllacy Shop Logo">
+      <img src="img/svgs/logo.svg" alt="Gllacy Shop Logo">
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
@@ -27,10 +27,10 @@
           <button type="button"><img src="img/search.png" alt="search item"></button>
         </li>
         <li>
-          <button type='button'><img src="img/Login.png" alt="login">Вход</button>
+          <button type='button'><img src="img/svgs/entrance.svg" alt="login">Вход</button>
         </li>
         <li>
-          <a href="img/Корзина2.png">2 товара</a>
+          <a href="img/svgs/basket-red.svg">2 товара</a>
         </li>
       </ul>
     </header>
@@ -127,14 +127,14 @@
       </main>
       <footer>
         <ul>
-          <li><img src="img/twt.png" alt="twitter link"></li>
-          <li><img src="img/inst.png" alt="instagram link"></li>
-          <li><img src="img/fb.png" alt="facebook link"></li>
-          <li><img src="img/vk.png" alt="vk link"></li>
+          <li><img src="img/svgs/twitter.svg" alt="twitter link"></li>
+          <li><img src="img/svgs/instagram.svg" alt="instagram link"></li>
+          <li><img src="img/svgs/fb.svg" alt="facebook link"></li>
+          <li><img src="img/svgs/vk.svg" alt="vk link"></li>
         </ul>
         <div >
           <div>
-            <img src="img/heart.png" alt="heart">
+            <img src="img/svgs/heart.svg" alt="heart">
             <p>Для поставщиков</p>
             <p>О производстве</p>
           </div>
@@ -152,14 +152,14 @@
       <!-- cart form -->
       <section>
         <div>
-          <button type="button">x</button>
+          <button type="button" class="cross-btn">x</button>
           <img src="img/catalog/sm-ic-1.png" alt="ice cream image">
           <p>Пломбир с апельсиновым джемом</p>
           <div>1,5 кг х 200 руб.</div>
           <div>200 руб.</div>
         </div>
         <div>
-          <button type="button">x</button>
+          <button type="button" class="cross-btn">x</button>
           <img src="img/catalog/sm-ic-2.png" alt="ice cream image">
           <p>Клубничный пломбир с присыпкой из белого шоколада</p>
           <div>1,5 кг х 300 руб.</div>
