--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <img src="img/Logo.png" alt="Gllacy Shop Logo">
+      <img src="img/svgs/logo.svg" alt="Gllacy Shop Logo">
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
@@ -27,10 +27,10 @@
           <button><img src="img/Search.png" alt="search item"></button>
         </li>
         <li>
-          <button type="button"><img src="img/Login.png" alt="login">Вход</button>
+          <button type="button"><img src="img/svgs/entrance.svg" alt="login">Вход</button>
         </li>
         <li>
-          <a href="img/cart2.png">Пусто</a>
+          <a href="img/svgs/basket.svg">Пусто</a>
         </li>
       </ul>
     </header>
@@ -103,17 +103,17 @@
         <article>
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
             собственного производства на развес</h2>
-          <img src="img/icecream.png" alt="ice cream icon">
+          <img src="img/svgs/ice-cream.svg" alt="ice cream icon">
           <p>Все наше мороженое изготавливается на собственном производстве, с
             использованием современного оборудования и проверенных временем
             технологий.</p>
-          <img src="img/leaf.png" alt="leaf icon">
+          <img src="img/svgs/eco.svg" alt="leaf icon">
           <p>Для приготовления мороженого используются настоящие сливки и молоко
             высочайшего качества. Все дополнительные ингредиенты и добавки
             произведены из натурального, экологически чистого сырья.</p>
-          <img src="img/cow.png" alt="cow icon">
+          <img src="img/svgs/cow.svg" alt="cow icon">
           <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          <img src="img/thermometer.png" alt="thermometer icon">
+          <img src="img/svgs/thermometer.svg" alt="thermometer icon">
           <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </article>
         <section>
@@ -122,6 +122,7 @@
           <h4>10 способов сервировки фруктовых щербетов к столу</h4>
         </section>
         <section>
+          <div class="striped-bkg"></div>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
           <input type="text" value="email@example.com">
           <button>Отправить</button>
@@ -130,7 +131,7 @@
       <section>
         <!-- iframe of google maps -->
         <img src="img/map.png"> <!-- temp -->
-        <img src="img/pin.svg" alt="pin">
+        <img src="img/svgs/pin.svg" alt="pin">
         <div>
           <p>Адрес главного офиса и офлайн-магазина:</p>
           <p><b>ул. Большая Конюшенная 19/8, <br>
@@ -144,14 +145,14 @@
     </main>
     <footer>
       <ul>
-        <li><img src="img/twt.png" alt="twitter link"></li>
-        <li><img src="img/inst.png" alt="instagram link"></li>
-        <li><img src="img/fb.png" alt="facebook link"></li>
-        <li><img src="img/vk.png" alt="vk link"></li>
+        <li><img src="img/svgs/twitter.svg" alt="twitter link"></li>
+        <li><img src="img/svgs/instagram.svg" alt="instagram link"></li>
+        <li><img src="img/svgs/fb.svg" alt="facebook link"></li>
+        <li><img src="img/svgs/vk.svg" alt="vk link"></li>
       </ul>
       <div >
         <div>
-          <img src="img/heart.png" alt="heart">
+          <img src="img/svgs/heart.svg" alt="heart">
           <p>Для поставщиков</p>
           <p>О производстве</p>
         </div>
