--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   </head>
   <body>
     <header>
-      <img src="img/svgs/logo.svg" alt="Gllacy Shop Logo">
+      <a>
+        <img src="img/svgs/logo.svg" alt="Gllacy Shop Logo">
+      </a>
       <nav>
         <ul>
             <li><a href="catalog.html">Каталог</a>
               <ul>
-                <li>Новинки</li>
-                <li>Сливочное</li>
-                <li>Щербеты</li>
-                <li>Фруктовый лед</li>
-                <li>Мелорин</li>
+                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Сливочное</a></li>
+                <li><a href="#">Щербеты</a></li>
+                <li><a href="#">Фруктовый лед</a></li>
+                <li><a href="#">Мелорин</a></li>
               </ul>
             </li>
             <li><a href="#">Доставка и оплата</a></li>
@@ -153,39 +155,42 @@
       <div >
         <div>
           <img src="img/svgs/heart.svg" alt="heart">
-          <p>Для поставщиков</p>
-          <p>О производстве</p>
+          <p><a href="#">Для поставщиков</a></p>
+          <p><a href="#">О производстве</a></p>
         </div>
         <div>
-          <p>Наши документы</p>
-          <p>Экологические стандарты</p>
+          <p><a href="#">Наши документы</a></p>
+          <p><a href="#">Экологические стандарты</a></p>
         </div>
       </div>
       <div>
-        <img src="img/htmlacad-small-logo.png" alt="small html academy">
-        <p>Сделано в HTML Academy © 2019</p>
+        <a>
+          <img src="img/htmlacad-small-logo.png" alt="small html academy">
+        </a>
+        <p>Сделано в <a href="https://htmlacademy.ru/">HTML Academy</a> © 2019</p>
       </div>
     </footer>
     <!-- login form -->
     <section>
-      <form>
-        <input type="text" value="email@example.com">
-        <input type="text" value="••••••••">
+      <form method="post"
+          action="https://dammytemplink.com">
+        <input type="text" name="email" placeholder="email@example.com">
+        <input type="text" name="password" placeholder="••••••••">
         <button type="button">Войти</button>
-        <p>Забыли пароль?</p>
-        <p>Новая регистрация</p>
+        <a href="#">Забыли пароль?</a>
+        <a href="#">Новая регистрация</a>
       </form>
     </section>
     <!-- search -->
     <form>
-      <input type="text">
+      <input type="text" name="search">
     </form>
     <!-- obratnaya svyaz' -->
     <form>
       <h4>Мы обязательно вам ответим!"</h4>
-      <input type="text">
-      <input type="text">
-      <textarea rows="8" cols="80">В свободной форме
+      <input type="text" name="fullname">
+      <input type="text" name="email">
+      <textarea name="comments" rows="8" cols="80">В свободной форме
       </textarea>
       <button type="button">Отправить</button>
     <form>
